--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
     "lint": "eslint \"**/*.js\"",
+    "test": "npm run lint",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
@@ -25,6 +26,7 @@
   "homepage": "https://github.com/jjmateer/Tavern#readme",
   "dependencies": {
     "axios": "^0.19.0",
+    "babel-eslint": "^10.0.3",
     "bcryptjs": "^2.4.3",
     "concurrently": "^5.0.0",
     "cors": "^2.8.5",
