--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.3",
     "bcryptjs": "^2.4.3",
+    "classnames": "^2.2.6",
     "concurrently": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.7.12",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
